SERVER-118550 Make MatchNode propagate FieldEffect in anti-materialization (#47317)

GitOrigin-RevId: 29005ce7e4077d918d8f7cad2396e3b03e993b6e